--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "firebase": "^9.21.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.2",
+    "remove": "^0.1.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
