--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.2",
     "remove": "^0.1.5",
+    "swiper": "^9.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
